<resources>
    <string name="app_name">Lost And Found</string>
    <string name="lost_found"><![CDATA[Lost & Found]]></string>
    <string name="add_lost_item">اضافت مفقودات</string>
    <string name="enter_location_lost">اضق موقع المفقود</string>
    <string name="enter_item_name">اضف اسم الشيء المفقود</string>
    <string name="enter_details">اضافة التفاصيل</string>
    <string name="add">اضافة</string>
    <string name="item_name">اسم المفقود : </string>
    <string name="item_location">موقع المفقود : </string>
    <string name="item_details">تفاصيل اخرى : </string>
    <string name="back">رجوع</string>
    <string name="this_is_requierd">هذا الحقل مطلوب</string>
</resources>