<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_item_name_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_item_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_location_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_location_lost"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_details_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_details"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="top|start" />

        <Button
            android:id="@+id/btn_add_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>
</ScrollView>
