<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_item_name_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/item_name"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_location_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:gravity="right"
            android:padding="8dp"
            android:text="@string/item_location"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_details_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:gravity="right"
            android:padding="8dp"
            android:text="@string/item_details"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/bt_back_details"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:backgroundTint="#03A9F4"
            android:text="@string/back"/>

    </LinearLayout>
</ScrollView>
